@@ -230,6 +230,8 @@ Release 2.6.0 - UNRELEASED
     HADOOP-10731. Remove @date JavaDoc comment in ProgramDriver class (Henry 
     Saputra via aw)
 
+    HADOOP-11153. Make number of KMS threads configurable. (wang)
+
   OPTIMIZATIONS
 
     HADOOP-10838. Byte array native checksumming. (James Thomas via todd)
